<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tv_login_backdrop"
    android:padding="48dp">
    <LinearLayout
        android:layout_width="560dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/tv_panel_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp">
        <ImageView
            android:layout_width="280dp"
            android:layout_height="108dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/app_logo" />
        <TextView
            android:id="@+id/recovery_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/offline_title"
            android:textColor="@color/tv_text_primary"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/recovery_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/offline_message"
            android:textColor="@color/tv_text_secondary"
            android:textSize="17sp" />
        <Button
            android:id="@+id/recovery_retry"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/tv_button_primary"
            android:nextFocusDown="@id/recovery_sign_out"
            android:text="@string/offline_retry"
            android:textAllCaps="false"
            android:textColor="@color/tv_text_primary"
            android:textSize="20sp" />
        <Button
            android:id="@+id/recovery_sign_out"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/tv_button_secondary"
            android:nextFocusDown="@id/recovery_sign_out"
            android:nextFocusUp="@id/recovery_retry"
            android:text="@string/settings_sign_out"
            android:textAllCaps="false"
            android:textColor="@color/tv_text_primary"
            android:textSize="20sp" />
    </LinearLayout>
</FrameLayout>
